--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!--add globalThis to initialize text editor-->
+    <script>const global = globalThis;</script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
