fb domain verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <meta name="facebook-domain-verification" content="3ighuvr2ofnkfpl8fvaeujqla63me0" />
+  
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -78,7 +80,7 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
-  
+
   <div id="root"></div>
   <!--add globalThis to initialize text editor-->
   <script>const global = globalThis;</script>
